--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,75 @@
+/* reset css */
 *,
 *::after,
 *::before {
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
+	list-style: none;
+	text-decoration: none;
 }
+/* font sizes */
+/* 10/ 12 /14 /16 /18/ 20/ 24/ 30/ 36/ 44 /52 /62 /74 /86 /98 */
+
+/* spacing */
+/* 2 /4 /8 /12 /16 /24 /32 /48 /64 /80 /96 /128 */
+:root {
+	--dark: #121418;
+	--orange-red: #ff463a;
+	--white: #fff;
+	--light-gray: #ffffffb3;
+}
+
+html {
+	font-size: 62.5%;
+}
+
 img,
 picture {
 	display: block;
+	width: 100%;
+}
+
+body {
+	background: var(--dark);
+	color: var(--white);
+	font-family: sans-serif;
+}
+
+.grid {
+	display: grid;
+}
+
+.grid-col-2 {
+	grid-template-columns: repeat(2, 1fr);
+}
+.grid-col-3 {
+	grid-template-columns: repeat(3, 1fr);
+}
+.grid-row {
+	grid-template-rows: 1fr;
+}
+
+.flex {
+	display: flex;
+}
+
+.ai-c {
+	align-items: center;
+}
+
+.jc-sb {
+	justify-content: space-between;
+}
+
+.d-none {
+	display: none;
+}
+.container {
+	width: 80%;
+	margin: auto;
+}
+
+.container-inner {
+	padding: 4.8rem 10%;
 }
