--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
 /* 2 /4 /8 /12 /16 /24 /32 /48 /64 /80 /96 /128 */
 :root {
 	--dark: #121418;
+	--dark-2: #1f2021;
+
 	--orange-red: #ff463a;
 	--white: #fff;
 	--light-gray: #ffffffb3;
@@ -25,7 +27,8 @@ html {
 }
 
 img,
-picture {
+picture,
+a {
 	display: block;
 	width: 100%;
 }
@@ -35,17 +38,15 @@ body {
 	color: var(--white);
 	font-family: sans-serif;
 }
-
+button {
+	border: none;
+	outline: none;
+	cursor: pointer;
+}
 .grid {
 	display: grid;
 }
 
-.grid-col-2 {
-	grid-template-columns: repeat(2, 1fr);
-}
-.grid-col-3 {
-	grid-template-columns: repeat(3, 1fr);
-}
 .grid-row {
 	grid-template-rows: 1fr;
 }
@@ -54,12 +55,19 @@ body {
 	display: flex;
 }
 
+.flex-col {
+	flex-direction: column;
+}
+
 .ai-c {
 	align-items: center;
 }
 
 .jc-sb {
 	justify-content: space-between;
+}
+.jc-c {
+	justify-content: center;
 }
 
 .d-none {
@@ -72,4 +80,50 @@ body {
 
 .container-inner {
 	padding: 4.8rem 10%;
+}
+.text {
+	font-size: 1.6rem;
+	font-weight: 400;
+	color: var(--light-gray);
+	line-height: 1.5;
+}
+.bottom-border {
+	border-bottom: 1px solid var(--light-gray);
+	padding: 1rem 0;
+}
+.sub-heading {
+	font-size: 3rem;
+	text-transform: capitalize;
+	margin-bottom: 1.6rem;
+}
+.mb-regular {
+	margin-bottom: 3.2rem;
+}
+@media (min-width: 786px) {
+	.grid-gap {
+		gap: 2.4rem;
+	}
+	.sub-heading {
+		font-size: 7.4rem;
+	}
+	.grid-col-2 {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	.grid-col-3 {
+		grid-template-columns: repeat(3, 1fr);
+	}
+	.text {
+		font-size: 1.8rem;
+	}
+	.approach-heading {
+		width: 88.8rem;
+		margin-bottom: 4.8rem;
+	}
+	.workflow-heading {
+		width: 77.7rem;
+		margin-bottom: 4.8rem;
+	}
+	.up-arrows {
+		width: 8.6rem;
+	}
 }
