--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,44 @@ button {
 .mb-regular {
 	margin-bottom: 3.2rem;
 }
-@media (min-width: 786px) {
+@media (min-width: 51em) {
+	.menu {
+		display: none;
+	}
+	.message-mail {
+		display: flex;
+		text-decoration: underline;
+		transition: all 0.3s ease-in;
+	}
+	.message-mail span {
+		font-size: 1.6rem;
+	}
+
+	.close {
+		display: none;
+	}
+	.nav-links {
+		display: flex;
+		color: white;
+		gap: 2.4rem;
+	}
+	.nav-links li {
+		font-size: 1.6rem;
+		color: var(--light-gray);
+		text-transform: capitalize;
+		cursor: pointer;
+		transition: all 0.3s ease-in;
+		display: inline-flex;
+	}
+	.message-mail:hover,
+	.nav-links li:hover {
+		color: var(--orange-red);
+		transform: translateY(-2px);
+		font-weight: bold;
+	}
+	.mail-icon {
+		width: 1.6rem;
+	}
 	.grid-gap {
 		gap: 2.4rem;
 	}
